--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,20 @@
-<nav class="navbar bg-primary justify-content-end mb-4">
-    <div class="row">
+<nav class="navbar fixed-bottom bg-primary justify-content-between mt-4">
+
+    <div class="row align-items-center">
+        <a class="btn btn-primary col mx-1 py-0" 
+        routerLink="/customer"
+        routerLinkActive="active">
+            Budget Badger
+        </a>
+        <a 
+        class="btn btn-primary col-2 mx-1 py-2" 
+        routerLink="/customer"
+        routerLinkActive="active">
+        <i class="fa fa-2x fa-plus-square"></i>
+        </a>
         <a 
         class="btn btn-primary col mx-1 py-0" 
         routerLink="/customer"
         routerLinkActive="active">Expenses</a>
-        <a 
-        class="btn btn-primary col mx-1 py-0" 
-        routerLink="/order"
-        routerLinkActive="active">Tags</a>
     </div>
 </nav>
