--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 $primary: purple;
 $danger: red;
 
-//@import "bootstrap";
+/* You can add global styles to this file, and also import other style files */
+// styles.scss
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
