--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 $primary: purple;
+$secondary: rgb(141, 68, 0);
 $danger: red;
 
 /* You can add global styles to this file, and also import other style files */
