--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,22 @@
 <nav class="navbar fixed-bottom bg-primary justify-content-between mt-4">
 
     <div class="row align-items-center">
-        <a class="btn btn-primary col mx-1 py-0" 
-        routerLink="/customer"
+        <a class="btn btn-primary col mx-1" 
+        routerLink="/settings"
         routerLinkActive="active">
             Budget Badger
         </a>
         <a 
-        class="btn btn-primary col-2 mx-1 py-2" 
-        routerLink="/customer"
+        class="btn btn-primary col mx-1" 
+        routerLink="/creation"
         routerLinkActive="active">
-        <i class="fa fa-2x fa-plus-square"></i>
+            <i class="fa fa-2x fa-plus-square"></i>
         </a>
         <a 
-        class="btn btn-primary col mx-1 py-0" 
-        routerLink="/customer"
-        routerLinkActive="active">Expenses</a>
+        class="btn btn-primary col mx-1" 
+        routerLink="/expenses"
+        routerLinkActive="active">
+            <i class="fa fa-2x fa fa-bars"></i>
+        </a>
     </div>
 </nav>
